[project]
name = "langgraph-first-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-community>=0.3.24",
    "langchain>=0.3.25",
    "langgraph>=0.4.5",
    "openai>=1.78.1",
    "langchain-openai>=0.3.17",
    "langsmith>=0.3.42",
    "langchain-tavily>=0.1.6",
]
