[project]
name = "langgraph-first-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.25",
    "langgraph>=0.4.5",
    "openai>=1.78.1",
    "langsmith>=0.3.42",
    "pydantic-ai>=0.2.4",
    "langchain-openai>=0.3.17",
    "langchain-tavily>=0.1.6",
]
